# ctpwrapper

./: .appveyor.yml  README.md  generate.py  generate_structure.py  pyproject.toml  setup.py
.github/workflows/: build.yaml  deploy.yaml
ctp/: version.txt
ctp/header/: DataCollect.h  ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.xml
ctp/win/: WinDataCollect.lib
ctpwrapper/: ApiStructure.py  Md.py  MdApi.pyx  Trader.py  TraderApi.pyx  __init__.py  base.py
ctpwrapper/cppheader/: CTraderAPI.h
ctpwrapper/headers/: ThostFtdcUserApiDataType.pxd  ThostFtdcUserApiStruct.pxd  cMdAPI.pxd  cTraderApi.pxd
doc/: trader_api_py_function_dictionary.md
docker/: Dockerfile  pypy3-Dockerfile
docs/: api_structure_dictionary.md  mdapi-function-dictionary.md
